# lokiwiki

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmarks_README.md  merge_judge_scores.py
benchmarks/data/: questions.json
benchmarks/prompts/: judge.jinja
lokiwiki/: cli.py
lokiwiki.egg-info/: PKG-INFO  SOURCES.txt
src/lokiwiki/: cli.py
src/lokiwiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lokiwiki/core/: files.py  llm.py
src/lokiwiki/prompts/: create_page.jinja  fix_orphan.jinja  ingest.jinja  lint.jinja  query.jinja  relevance.jinja
tests/: conftest.py  test_cli.py  test_files.py  test_llm.py
