[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokiwiki"
version = "0.1.0"
description = "Fully local Karpathy LLM Wiki with native Obsidian support"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "ollama>=0.4",
    "python-frontmatter>=1.0",
    "PyYAML>=6.0",
    "pypdf>=5.0",
    "rich>=13.0",
]

[project.scripts]
lokiwiki = "lokiwiki.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]